# naida

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  a.py
examples/: CMakeLists.txt  app.cc
include/naida/: block.hh  common.hh  layer.hh  tensor.hh  tokenizer.hh  weight_loader.hh
models/: run.sh
src/: CMakeLists.txt  block.cc  common.cc  layer.cc  tensor.cc  tokenizer.cc  weight_loader.cc
tests/: CMakeLists.txt  hello_test.cc
